--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -43,25 +43,13 @@
             <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
             <DatePicker Margin="5,0,5,5" />
         </StackPanel>
-        <Image Margin="10"/>
+
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
             <Button x:Name="Cancel" Content="Zrušit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
             <Button x:Name="SaveToDatabase" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
         </StackPanel>
-        
-        
-        
-        <StackPanel Grid.Column="2" Grid.Row="1">
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Name}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=ChipNumber}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Sex}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Species}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Breed}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=CoatType}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=FurColor}"/>
-            <TextBlock Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="{Binding Path=Animal}"/>
-            
-        </StackPanel>
+        <Button x:Name="LoadImage" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,10,10"/>
+        <Image Margin="10" Source="{Binding Path=AnimalImage}"/>
 
     </Grid>
 </UserControl>
