--- a/ShelterEvidency/Views/SearchPersonView.xaml
+++ b/ShelterEvidency/Views/SearchPersonView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ShelterEvidency.Views.SearchAnimalView"
+﻿<UserControl x:Class="ShelterEvidency.Views.SearchPersonView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,11 +15,11 @@
             <TextBlock TextWrapping="Wrap" Text="Vyhledávání:" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBox x:Name="SearchValue" TextWrapping="Wrap" Margin="5,5,5,5" Width="400" VerticalContentAlignment="Center"/>
             <TextBlock TextWrapping="Wrap" Text="{Binding Path=SearchValue}"/>
-            <TextBlock TextWrapping="Wrap" Text="{Binding Path=SelectedAnimal}"/>
-            <Button x:Name="AddAnimal" Content="Přidat" Margin="5" Width="75"/>
-            <Button x:Name="OpenEvidencyCard" Content="Evidenční karta" Margin="5"/>
+            <TextBlock TextWrapping="Wrap" Text="{Binding Path=SelectedPerson}"/>
+            <Button x:Name="AddPerson" Content="Přidat" Margin="5" Width="75"/>
+            <Button x:Name="OpenDetail" Content="Detail" Margin="5"/>
         </StackPanel>
-        <DataGrid Grid.Row="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=Animals, Mode=OneWay}" SelectedItem="{Binding Path=SelectedAnimal, Mode=OneWayToSource}"/>
+        <DataGrid Grid.Row="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" ItemsSource="{Binding Path=People, Mode=OneWay}" SelectedItem="{Binding Path=SelectedPerson, Mode=OneWayToSource}"/>
         <ContentControl x:Name="ActiveItem" Grid.RowSpan="2"/>
 
     </Grid>
