--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -16,39 +16,50 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1">
+        <StackPanel Grid.Column="1" Grid.RowSpan="2">
             <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
             <TextBox x:Name="Name" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
 
             <TextBlock TextWrapping="Wrap" Text="Číslo čipu/tetování:" Margin="5"/>
             <TextBox x:Name="ChipNumber"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneTime}" SelectedItem="{Binding Path=Sex, Mode=OneWayToSource}"/>
+            <TextBlock TextWrapping="Wrap" Text="Datum příjmu:" Margin="5"/>
+            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneTime}" SelectedItem="{Binding Path=Species, Mode=OneWayToSource}"/>
+            <TextBlock TextWrapping="Wrap" Text="Datum narození (odhad):" Margin="5"/>
+            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}"/>
 
         </StackPanel>
-        <StackPanel Grid.Column="2">
+        <StackPanel Grid.Column="2" Grid.RowSpan="2">
+
+            <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}"/>
+
             <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneTime}" SelectedItem="{Binding Path=Breed, Mode=OneWayToSource}"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
 
             <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneTime}" SelectedItem="{Binding Path=FurColor, Mode=OneWayToSource}"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
 
             <TextBlock TextWrapping="Wrap" Text="Typ srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneTime}" SelectedItem="{Binding Path=CoatType, Mode=OneWayToSource}"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}"/>
 
-            <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" />
+            <TextBlock TextWrapping="Wrap" Text="Krmná dávka (g):" Margin="5"/>
+            <TextBox x:Name="FeedRytion"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Poznámka:" Margin="5"/>
+            <TextBox  x:Name="Note" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
             <Button x:Name="Cancel" Content="Zrušit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
             <Button x:Name="SaveToDatabase" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
         </StackPanel>
-        <Button x:Name="LoadImage" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,10,10"/>
+        <Button x:Name="LoadImage" Content="Nahrát obrázek" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,10"/>
         <Image Margin="10" Source="{Binding Path=AnimalImage}"/>
 
     </Grid>
