--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -24,26 +24,26 @@
             <TextBox x:Name="ChipNumber"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ChipNumber, Mode=TwoWay}"/>
 
             <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneTime}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=OneWayToSource}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneTime}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
             <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneTime}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=OneWayToSource}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneTime}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
         </StackPanel>
         <StackPanel Grid.Column="2">
             <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneTime}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneTime}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
             <TextBlock TextWrapping="Wrap" Text="Typ srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneTime}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=OneWayToSource}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneTime}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
             
             <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneTime}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneTime}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
 
 
             <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" />
+            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path= BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
