--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -41,6 +41,10 @@
             <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
             <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=OneWayToSource}"/>
 
+            <TextBlock TextWrapping="Wrap" Text="Kžíženec:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=OneWayToSource}"/>
+
+
             <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
             <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=OneWayToSource}"/>
 
