--- a/ShelterEvidency/Views/SettingsView.xaml
+++ b/ShelterEvidency/Views/SettingsView.xaml
@@ -12,7 +12,7 @@
             <RowDefinition Height="25*"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button x:Name="ComboBoxSettings" Content="Nastavení výběrů" Margin="2,0,0,0" Padding="2,0"/>
+            <Button x:Name="ComboBoxSettings" Content="Nastavení číselníků" Margin="2,0,0,0" Padding="2,0"/>
             <Button Content="Nastavení 2" Margin="2,0,0,0" Padding="2,0"/>
             <Button Content="Nastavení 3" Margin="2,0,0,0" Padding="2,0"/>
         </StackPanel>
