--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -16,34 +16,47 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <StackPanel Grid.Column="1">
-            <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
-            <TextBox x:Name="Name" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Name, Mode=TwoWay}"/>
+        <StackPanel Grid.Column="1" Grid.RowSpan="2">
+            <TextBlock TextWrapping="Wrap" Text="Identifikační číslo:" Margin="5"/>
+            <TextBox x:Name="ID" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ID, Mode=OneTime}" IsReadOnly="True"/>
+
 
             <TextBlock TextWrapping="Wrap" Text="Číslo čipu/tetování:" Margin="5"/>
             <TextBox x:Name="ChipNumber"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=ChipNumber, Mode=TwoWay}"/>
 
             <TextBlock TextWrapping="Wrap" Text="Pohlaví:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneTime}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SexList, Mode=OneWay}" DisplayMemberPath="SexName" SelectedValuePath="Id" SelectedValue="{Binding Path=Sex, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
             <TextBlock TextWrapping="Wrap" Text="Druh:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneTime}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=SpeciesList, Mode=OneWay}" DisplayMemberPath="SpeciesName" SelectedValuePath="Id" SelectedValue="{Binding Path=Species, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Kříženec:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
         </StackPanel>
-        <StackPanel Grid.Column="2">
-            <TextBlock TextWrapping="Wrap" Text="Plemeno:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneTime}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=Breed, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
-
-            <TextBlock TextWrapping="Wrap" Text="Typ srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneTime}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
-            
-            <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
-            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneTime}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
-
-
+        <StackPanel Grid.Column="2" Grid.RowSpan="2">
+            <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
+            <TextBox x:Name="Name" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Name, Mode=TwoWay}"/>
 
             <TextBlock TextWrapping="Wrap" Text="Datum narození:" Margin="5"/>
             <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path= BirthDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+            
+            <TextBlock TextWrapping="Wrap" Text="Typ srsti:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=CoatTypeList, Mode=OneWay}" DisplayMemberPath="CoatTypeName" SelectedValuePath="Id" SelectedValue="{Binding Path=CoatType, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+            
+            <TextBlock TextWrapping="Wrap" Text="Barva srsti:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=FurColorList, Mode=OneWay}" DisplayMemberPath="FurColorName" SelectedValuePath="Id" SelectedValue="{Binding Path=FurColor, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Krmná dávka (g):" Margin="5"/>
+            <TextBox x:Name="FeedRation"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=FeedRation, Mode=TwoWay}"/>
+
+            <TextBlock TextWrapping="Wrap" Text="Poznámka:" Margin="5"/>
+            <TextBox  x:Name="Note" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Note, Mode=TwoWay}"/>
+
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
