--- a/ShelterEvidency/Views/MedicalInfoView.xaml
+++ b/ShelterEvidency/Views/MedicalInfoView.xaml
@@ -6,7 +6,56 @@
              xmlns:local="clr-namespace:ShelterEvidency.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="#FF00F3FF">
-            
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Column="1" Margin="5" SelectionMode="Single" SelectionUnit="FullRow" CanUserAddRows="False" SelectedValuePath="Id" ItemsSource="{Binding Path=AnimalMedicalRecords, Mode=OneWay}" SelectedValue="{Binding Path=SelectedMedicalRecord, Mode=OneWayToSource}"/>
+        <StackPanel Margin="5">
+            <GroupBox Header="Upravit vybraný záznam:">
+                <StackPanel>
+                    <TextBlock TextWrapping="Wrap" Text="Název:" Margin="5"/>
+                    <TextBox x:Name="RecordName" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Částka:" Margin="5"/>
+                    <TextBox x:Name="Price" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" />
+
+                    <TextBlock TextWrapping="Wrap" Text="Datum:" Margin="5"/>
+                    <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+                    <TextBlock TextWrapping="Wrap" Text="Veterinář:" Margin="5"/>
+                    <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=VetList, Mode=OneTime}" DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Vet, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Popis:" Margin="5"/>
+                    <TextBox x:Name="Description" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50"/>
+
+                    <Button x:Name="UpdateMedicalRecord" Content="Upravit"/>
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Přidat nový záznam:">
+                <StackPanel>
+                    <TextBlock TextWrapping="Wrap" Text="Název:" Margin="5"/>
+                    <TextBox x:Name="NewRecordName" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Částka:" Margin="5"/>
+                    <TextBox x:Name="NewPrice" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Datum:" Margin="5"/>
+                    <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=NewDate, Mode=OneWayToSource}"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Veterinář:" Margin="5"/>
+                    <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=VetList, Mode=OneTime}" DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=NewVet, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Popis:" Margin="5"/>
+                    <TextBox x:Name="NewDescription" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" MinHeight="50"/>
+
+                    <Button x:Name="CreateNewMedicalRecord" Content="Přidat"/>
+                </StackPanel>
+            </GroupBox>
+
+        </StackPanel>
+
     </Grid>
 </UserControl>
