--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -36,6 +36,9 @@
             <TextBlock TextWrapping="Wrap" Text="Kříženec:" Margin="5"/>
             <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=BreedList, Mode=OneWay}" DisplayMemberPath="BreedName" SelectedValuePath="Id" SelectedValue="{Binding Path=CrossBreed, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
 
+            <TextBlock TextWrapping="Wrap" Text="Veterinář:" Margin="5"/>
+            <ComboBox Margin="5,0,5,5" ItemsSource="{Binding Path=VetList, Mode=OneWay}" DisplayMemberPath="TitledFullName" SelectedValuePath="ID" SelectedValue="{Binding Path=Vet, Mode=TwoWay}" IsSynchronizedWithCurrentItem="True"/>
+
         </StackPanel>
         <StackPanel Grid.Column="2" Grid.RowSpan="2">
             <TextBlock TextWrapping="Wrap" Text="Jméno:" Margin="5"/>
@@ -60,7 +63,6 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
-            <Button x:Name="Cancel" Content="Zrušit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
             <Button x:Name="UpdateAnimal" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
         </StackPanel>
         <Button x:Name="LoadImage" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,10,10"/>
