--- a/ShelterEvidency/Views/EvidencyCardView.xaml
+++ b/ShelterEvidency/Views/EvidencyCardView.xaml
@@ -18,6 +18,7 @@
             <Button x:Name="Costs" Content="Náklady" Margin="2,0,0,0" Padding="2,0"/>
             <Button x:Name="Incidents" Content="Incidenty" Margin="2,0,0,0" Padding="2,0"/>
             <Button x:Name="Walks" Content="Venčení" Margin="2,0,0,0" Padding="2,0"/>
+            <Button x:Name="People" Content="Navázané osoby" Margin="2,0,0,0" Padding="2,0"/>
             <Button x:Name="Documents" Content="Dokumenty" Margin="2,0,0,0" Padding="2,0"/>
 
             <TextBlock TextWrapping="Wrap" Text="{Binding Path=AnimalID}"/>
