added Diary class. minor updates

--- a/ShelterEvidency/Views/AddAnimalView.xaml
+++ b/ShelterEvidency/Views/AddAnimalView.xaml
@@ -24,10 +24,12 @@
             <TextBox x:Name="ChipNumber"  TextWrapping="Wrap" Margin="5,0,5,5" Padding="2"/>
 
             <TextBlock TextWrapping="Wrap" Text="Datum příjmu:" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}"/>
+            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=StayStartDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
 
             <TextBlock TextWrapping="Wrap" Text="Datum narození (odhad):" Margin="5"/>
-            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}"/>
+            <DatePicker Margin="5,0,5,5" SelectedDate="{Binding Path=BirthDate, Mode=OneWayToSource}" SelectedDateFormat="Short"/>
+
+            <CheckBox Content="kastrát" IsChecked="{Binding Path = Castration, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
 
         </StackPanel>
         <StackPanel Grid.Column="2" Grid.RowSpan="2">
