--- a/ShelterEvidency/Views/BasicInfoView.xaml
+++ b/ShelterEvidency/Views/BasicInfoView.xaml
@@ -60,12 +60,15 @@
             <TextBlock TextWrapping="Wrap" Text="Poznámka:" Margin="5"/>
             <TextBox  x:Name="Note" TextWrapping="Wrap" Margin="5,0,5,5" Padding="2" Text="{Binding Path=Note, Mode=TwoWay}"/>
 
+            <CheckBox Content="kastrát" IsChecked="{Binding Path = Castration, Mode = TwoWay}" Margin="0,2,0,0" IsThreeState="False"/>
+
+
         </StackPanel>
 
         <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="5" Orientation="Horizontal">
             <Button x:Name="UpdateAnimal" Content="Uložit" Grid.Column="2" Grid.Row="1" Width="75" Margin="5,0,5,5"/>
         </StackPanel>
-        <Button x:Name="LoadImage" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Margin="0,0,10,10"/>
+        <Button x:Name="LoadImage" Grid.Row="1" Content="Image" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,0,10,10"/>
         <Image Margin="10" Source="{Binding Path=AnimalImage}"/>
         
         <StackPanel Grid.Column="1" Grid.Row="1">
