--- a/ShelterEvidency/Views/HomeView.xaml
+++ b/ShelterEvidency/Views/HomeView.xaml
@@ -3,12 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ShelterEvidency.Views"
         mc:Ignorable="d"
         Title="HomeView" Height="450" Width="800" WindowStartupLocation="CenterScreen" WindowState="Maximized">
+
     <Grid Margin="5">
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="100"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -16,23 +17,64 @@
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Row="1">
-            <Button x:Name="Home" Content="Úvod" Margin="2"/>
-            <Button x:Name="LoadAddAnimalPage" Content="Přidat zvíře" Margin="2"/>
-            <Button x:Name="LoadSearchAnimalPage" Content="Vyhledat zvíře" Margin="2"/>
-            <Button x:Name="LoadAddPersonPage" Content="Přidat osobu" Margin="2"/>
-            <Button x:Name="LoadSearchPersonPage" Content="Vyhledat osobu" Margin="2"/>
-            <Button x:Name="LoadAdoptionsPage" Content="Adopce" Margin="2"/>
-            <Button Content="Statistiky" Margin="2"/>
-            <Button x:Name="LoadSettingsPage" Content="Nastavení" Margin="2"/>
+        <StackPanel VerticalAlignment="Center">
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type TextBlock}">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="25"/>
+                </Style>
+            </StackPanel.Resources>
+            <TextBlock Text="Shelter Management" HorizontalAlignment="Center"/>
+            <TextBlock Text="Software" HorizontalAlignment="Center" />
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" >
+            <StackPanel.Resources>
+                <Style TargetType="{x:Type Button}">
+                    <Setter Property="Margin" Value="0,10,0,0"/>
+                    <Setter Property="Height" Value="35"/>
+                </Style>
+            </StackPanel.Resources>
+            <Button x:Name="Home" Content="Úvod"/>
+            <Button x:Name="LoadAddAnimalPage" Content="Přidat zvíře" />
+            <Button x:Name="LoadSearchAnimalPage" Content="Vyhledat zvíře" />
+            <Button x:Name="LoadAddPersonPage" Content="Přidat osobu" />
+            <Button x:Name="LoadSearchPersonPage" Content="Vyhledat osobu" />
+            <Button x:Name="LoadAdoptionsPage" Content="Adopce" />
+            <Button x:Name="LoadDonationsPage" Content="Finance/Dary" />
+            <Button Content="Statistiky" />
+            <Button x:Name="LoadSettingsPage" Content="Nastavení" />
         </StackPanel>
         <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="1" Grid.Column="1">
             <Grid   Margin="5">
-                <TextBlock Text="News" VerticalAlignment="Center"></TextBlock>
-                <TextBlock Text="Diary"></TextBlock>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Grid.Column="1">
+                        <Viewbox>
+                            <Calendar Margin="10" SelectedDate="{Binding SelectedDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </Viewbox>
+                        <GroupBox Header="Přidat poznámku na vybraný den:">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="5*"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBox x:Name="DiaryRecord" Text="{Binding Path=DiaryRecord, Mode=TwoWay}"/>
+                                <Button x:Name="CreateDiaryRecord" Content="OK" Grid.Column="1"/>
+                            </Grid>
+                        </GroupBox>
+                        <DataGrid ItemsSource="{Binding Path=RecordList, Mode=OneWay}" Margin="0,10,0,0"/>
+                    </StackPanel>
+
+                </Grid>
+
                 <ContentControl x:Name="ActiveItem" Grid.Column="1" Grid.Row="1"/>
             </Grid>
         </ScrollViewer>
-        
     </Grid>
 </Window>
